Added schematic figure of the model system (chaincapdevice.eps)

--- a/body.tex
+++ b/body.tex
@@ -38,10 +38,21 @@ discussion of the results, as well as conclusions and further perspectives.
 
 The system we studied consists of a simple atomic chain with interatomic
 separation of 0.28 nm (?), intended to mirror the system studied experimentally
-in [science paper?]. Two interatomic spacings are made larger than the others,
-to delineate a ``device'' between two leads. This spacing determines the
-degree to which the device states couple to the leads, and variation of the
-spacing allows us to explore different coupling regimes.
+in [science paper?] (See figure~\ref{fig:chaincapdevice}). Two interatomic
+spacings are made larger than the others, to delineate a ``device'' between two
+leads. This spacing determines the degree to which the device states couple to
+the leads, and variation of the spacing allows us to explore different coupling
+regimes.
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=0.9\linewidth]{figures/chaincapdevice}
+	\end{center}
+	\caption{Model system studied in this work. The device consists of 24
+	Gold atoms, while the leads (not fully shown to accentuate the
+	device-lead gaps) consist of 20 atoms each.}
+	\label{fig:chaincapdevice}
+\end{figure}
 
 For comparison purposes, the transmission spectrum of this system was
 calculated in the NEGF formalism using the TIMES~\cite{times} code. The
