Expanded caption of 4evals figure

--- a/body.tex
+++ b/body.tex
@@ -35,6 +35,7 @@ discussion of the results, as well as conclusions and further perspectives.
 \label{sec:method}
 
 \subsection{Model System}
+\label{subsec:modelsystem}
 
 The system we studied consists of a simple atomic chain with interatomic
 separation of 0.28 nm (?), intended to mirror the system studied experimentally
@@ -112,9 +113,11 @@ two. (The agreement is also obtained outside the plotted range.)
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/4evals}
 	\end{center}
-	\caption{Comparison of transmission data obtained from NEGF
-	calculations with the TIMES program~\cite{times}(red) and Lorentzian
-	broadened eigenvalues of $\um{H}_0 + \um{W}$ (green).}
+	\caption{Comparison of transmission data (red) with Lorentzian
+	broadened complex eigenvalues of $\um{H}_0 + \um{W}$ (green) for a
+	model system as described in section~\ref{subsec:modelsystem}, with
+	device-lead gap of 0.45 nm. Transmission data was obtained from NEGF
+	calculations with the TIMES program~\cite{times}.}
 	\label{fig:lobro-hwevals}
 \end{figure}
 
