--- a/body.tex
+++ b/body.tex
@@ -124,30 +124,22 @@ two. (The agreement is also obtained outside the plotted range.)
 \subsection{Single Determinant}
 \label{subsec:SingleDeterminant}
 
-The next step is to pass to the many-body picture, representing the wave
-function of the $N$ electron system as a single Slater determinant. The
+The next step is to pass to the many-body picture, initially representing the
+wave function of the $N$ electron system as a single Slater determinant. The
 quasiparticle peaks in the transmission spectrum are approximated by taking
 differences of many-body energies: $E^N - E^{N-1}$ yields the HOMO, while
 likewise $E^{N+1} - E^N$ yields the LUMO (other quasiparticle levels can be
 obtained by taking differences of excited many-body energies). The peaks for
-the HOMO and LUMO of the system obtained in this way are plotted in figures
-\ref{fig:nobranch_homo} and \ref{fig:nobranch_lumo}.
+the HOMO and LUMO of the system obtained in this way are plotted in figure
+\ref{fig:nobranch}.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/nobranch_homo}
+		\includegraphics[width=0.9\linewidth]{figures/nobranch}
 	\end{center}
-	\caption{Enlarged view of the HOMO, with the result from taking
-	differences of single-determinant many-body energies added in blue.}
-	\label{fig:nobranch_homo}
-\end{figure}
-
-\begin{figure}
-	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/nobranch_lumo}
-	\end{center}
-	\caption{Same as figure~\ref{fig:nobranch_homo}, but for the LUMO.}
-	\label{fig:nobranch_lumo}
+	\caption{HOMO and LUMO quasiparticle levels from
+	figure~\ref{fig:lobro-hwevals} with the }
+	\label{fig:nobranch}
 \end{figure}
 
 \subsection{Single Excitations}
