rejigged sections, added abstract section

--- a/body.tex
+++ b/body.tex
@@ -26,9 +26,9 @@ Interaction (CI) calculation.
 The rest of this paper is organized as follows: in section~\ref{sec:method}, we
 cover the methods used in this work, both for constructing the CAP and for
 solving the resulting complex symmetric many-body problem. In
-section~\ref{sec:results} we present some results of applying the formalism to
-a simple atomic chain system. Finally, section~\ref{sec:discussion} contains a
-discussion of the results, as well as conclusions and further perspectives.
+section~\ref{sec:results} we present and discuss some results of applying the
+formalism to a simple atomic chain system. Finally,
+section~\ref{sec:conclusions} contains conclusions and further perspectives.
 
 
 \section{Method}
@@ -84,7 +84,7 @@ those CSFs which excited into or from states localized in the device (as
 opposed to the part of the leads which is included in the device region) were
 considered, since we wanted to explore only excitations of the actual device.
 
-\section{Results}
+\section{Results and Discussion}
 \label{sec:results}
 
 \subsection{Single-Particle Picture}
@@ -170,6 +170,6 @@ Finally, we start adding correlation:
 	\label{fig:1em2}
 \end{figure}
 
-\section{Discussion}
-\label{sec:discussion}
+\section{Conclusions}
+\label{sec:conclusions}
 
