--- a/paper.tex
+++ b/paper.tex
@@ -18,6 +18,10 @@
 
 \newcommand{\um}[1]{\mathbf{#1}}
 
+\begin{abstract}
+	\input{abstract}
+\end{abstract}
+
 \input{body}
 
 \bibliographystyle{unsrt}
