--- a/paper.tex
+++ b/paper.tex
@@ -8,10 +8,13 @@
 \usepackage{amsfonts}
 \usepackage{subfig}
 \usepackage{graphicx}
+\usepackage{acronym}
 
 \author{Mark Szepieniec, Irene Yeriskin, Jim Greer}
 \title{Level Broadening in Correlated Systems Using Complex Absorbing
        Potentials and Configuration Interaction}
+
+\input{acronyms}
 
 \begin{document}
 \maketitle
