updated acronyms documentwide

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,2 +1,8 @@
 \acrodef{MCCI}{Monte Carlo Configuration Interaction}
 \acrodef{CAP}{Complex Absorbing Potential}
+\acrodef{CSF}{Configuration State Function}
+\acrodef{CI}{Configuration Interaction}
+\acrodef{DFT}{Density Functional Theory}
+\acrodef{NEGF}{Non-Equilibrium Green Function}
+\acrodef{HOMO}{Highest Occupied Molecular Orbital}
+\acrodef{LUMO}{Lowest Unoccupied Molecular Orbital}
