--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,9 @@
 Using a \acl{CAP} which was tuned specifically to reproduce eigenenergies
 obtained in a single-particle picture using a complex self-energy, we are able
-to model the effect of coupling of a quantum device to leads within a
-Configuration Interaction (many-body) formalism. The device and leads consist
-of chains of Au atoms, with a constant and identical interatomic spacing. Two
-values of device-lead spacing are studied, corresponding to different degrees
-of coupling. For both degrees of coupling, the effect of electron correlation
-on the shifts and broadenings of quasiparticle levels is studied by gradually
-decreasing the threshold for inclusion of Configuration State Functions into
-the CI vector.
+to model the effect of coupling of a quantum device to leads within a \ac{CI}
+(many-body) formalism. The device and leads consist of chains of Au atoms, with
+a constant and identical interatomic spacing. Two values of device-lead spacing
+are studied, corresponding to different degrees of coupling. For both degrees
+of coupling, the effect of electron correlation on the shifts and broadenings
+of quasiparticle levels is studied by gradually decreasing the threshold for
+inclusion of Configuration State Functions into the \ac{CI} vector.
