--- a/paper.tex
+++ b/paper.tex
@@ -20,6 +20,11 @@
 \maketitle
 
 \newcommand{\um}[1]{\mathbf{#1}}
+\newcommand{\umm}[1]{$\um{#1}$}
+\newcommand{\bra}[1]{\langle #1|}
+\newcommand{\ket}[1]{|#1 \rangle}
+\newcommand{\bracket}[2]{\langle #1|#2 \rangle}
+\newcommand{\matel}[3]{\bra{#1} #2 \ket{#3}}
 
 \begin{abstract}
 	\input{abstract}
