changed figure grouping; added extra level of correlation

--- a/body.tex
+++ b/body.tex
@@ -190,24 +190,24 @@ obtained in this way would still be describable as a single determinant (and
 thus, by definition, contain no correlation), but by adding degrees of freedom
 to the system, a degree of self-consistency is attained. The results for the
 \ac{HOMO} and \ac{LUMO} quasiparticle levels are plotted in
-figure~\ref{fig:singles}.
+figure~\ref{fig:cipeaks}.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/singles}
+		\includegraphics[width=0.9\linewidth]{figures/cipeaks}
 	\end{center}
 	\caption{}
-	\label{fig:singles}
+	\label{fig:cipeaks}
 \end{figure}
 
 Finally, we start adding correlation:
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/1em2}
+		\includegraphics[width=0.9\linewidth]{figures/cipeaks-device}
 	\end{center}
 	\caption{}
-	\label{fig:1em2}
+	\label{fig:cipeaks-device}
 \end{figure}
 
 \section{Conclusions}
