--- a/paper.tex
+++ b/paper.tex
@@ -11,8 +11,8 @@
 \usepackage{acronym}
 
 \author{Mark Szepieniec, Irene Yeriskin, Jim Greer}
-\title{Level Broadening in Correlated Systems Using Complex Absorbing
-       Potentials and Configuration Interaction}
+\title{Evaluation of Quasiparticle Levels in Correlated Systems Using
+       Configuration Interaction and Complex Absorbing Potentials}
 
 \input{acronyms}
 
