fixed typo in body

--- a/body.tex
+++ b/body.tex
@@ -6,7 +6,7 @@ calculating transport properties. In this scheme, electron correlations are
 taken into account by inclusion of the exchange-correlation potential $V_{xc}$
 in the \ac{DFT} step.
 
-Recently, additional use of the GW approximatin has become common, in order to
+Recently, additional use of the GW approximation has become common, in order to
 correct for the shifting of quasiparticle levels in the device due to coupling
 to, and applied bias on, the leads.
 
