Fixed bold subscript in eq 1

--- a/body.tex
+++ b/body.tex
@@ -85,9 +85,9 @@ This is achieved by solving the related problem
 
 \begin{subequations}
 \begin{align}
-	[\um{H} + \lambda \um{\Sigma(\omega_i^\lambda)] \ket{\psi_i^\lambda}}
+	[\um{H} + \lambda \um{\Sigma}(\omega_i^\lambda)] \ket{\psi_i^\lambda}
 	&= \omega_i^\lambda \ket{\psi_i^\lambda} \\
-	\bra{\varphi_i^\lambda} [\um{H} + \lambda \um{\Sigma(\omega_i^\lambda)}]
+	\bra{\varphi_i^\lambda} [\um{H} + \lambda \um{\Sigma}(\omega_i^\lambda)]
 	&= \omega_i^\lambda \bra{\varphi_i^\lambda} 
 	\label{eq:adiabaticap}
 \end{align}
