Added mention of weak coupling and discussion of HF evals in 4evals fig

--- a/body.tex
+++ b/body.tex
@@ -164,6 +164,11 @@ in the \ac{NEGF} formalism. Such a comparison is shown in
 figure~\ref{fig:lobro-hwevals}, with good agreement between the two. (The
 agreement is also obtained outside the plotted range.)
 
+This is a case of weak coupling, as can be seen by the narrowness of the
+transmission peaks, and by the fact that they are not significantly shifted
+from the real-valued Hartree-Fock single-particle levels, which are indicated
+by vertical blue lines in fig.~\ref{fig:lobro-hwevals}. 
+
 \begin{figure}
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/4evals}
@@ -172,7 +177,9 @@ agreement is also obtained outside the plotted range.)
 	broadened complex eigenvalues of $\um{H}_0 + \um{W}$ (green) for a
 	model system as described in section~\ref{subsec:modelsystem}, with
 	device-lead gap of 0.45 nm. Transmission data was obtained from
-	\ac{NEGF} calculations with the TIMES program~\cite{times}.}
+	\ac{NEGF} calculations with the TIMES program~\cite{times}.
+        Blue vertical lines indicate the single-particle levels of the device
+        in the Hartree-Fock approximation.}
 	\label{fig:lobro-hwevals}
 \end{figure}
 
