changed title to explicitly say gold chains

--- a/paper.tex
+++ b/paper.tex
@@ -11,7 +11,7 @@
 \usepackage{acronym}
 
 \author{Mark Szepieniec, Irene Yeriskin, Jim Greer}
-\title{Evaluation of Quasiparticle Levels in Correlated Systems Using
+\title{Evaluation of Quasiparticle Levels in Correlated Gold Chains Using
        Configuration Interaction and Complex Absorbing Potentials}
 
 \input{acronyms}
