fixed citation error on line 19

--- a/body.tex
+++ b/body.tex
@@ -16,7 +16,7 @@ compared to experimental results.
 
 A a different approach, methods from the field of quantum chemistry, with which
 it is possible to incorporate electron correlations to an arbitrary degree are
-used \cite{delaney} but in those cases, modeling the effect of coupling to leads
+used \cite{vici2004} but in those cases, modeling the effect of coupling to leads
 is problematic. Including an energy-dependent potential term in the Hamiltonian
 is possible in principle, but not feasible in practice.[citation?]
 
