fixed typo and formulation in Introduction

--- a/body.tex
+++ b/body.tex
@@ -14,11 +14,11 @@ that this approach corrects significantly the characteristic over-estimation by
 \ac{DFT}-based methods of zero-bias conductance and finite bias currents
 compared to experimental results.
 
-A a different approach, methods from the field of quantum chemistry, with which
-it is possible to incorporate electron correlations to an arbitrary degree are
-used \cite{vici2004} but in those cases, modeling the effect of coupling to leads
-is problematic. Including an energy-dependent potential term in the Hamiltonian
-is possible in principle, but not feasible in practice.[citation?]
+In a different approach, methods from the field of quantum chemistry, with
+which it is possible to incorporate electron correlations to an arbitrary
+degree can  used \cite{vici2004} but in those cases, modeling the effect of
+coupling to leads is problematic. Including an energy-dependent potential term
+in the Hamiltonian is possible in principle, but not feasible in practice.
 
 In earlier work~\cite{henderson}, a method was outlined in which an
 energy-dependent self-energy is mapped to an energy-independent
