updated figures, not properly updated body text

--- a/body.tex
+++ b/body.tex
@@ -45,7 +45,7 @@ section~\ref{sec:conclusions} contains conclusions and further perspectives.
 
 The system we studied consists of a simple atomic chain with interatomic
 separation of 0.28 nm (?), intended to mirror the system studied experimentally
-in [science paper?] (See figure~\ref{fig:chaincapdevice}). Two interatomic
+in~\cite{nilius2002science} (See figure~\ref{fig:chaincapdevice}). Two interatomic
 spacings are made larger than the others, to delineate a ``device'' between two
 leads. This spacing determines the degree to which the device states couple to
 the leads, and variation of the spacing allows us to explore different coupling
@@ -135,6 +135,7 @@ ran calculations with different values of the threshold parameter $cmin$.
 % were considered, since we wanted to explore only excitations of the actual
 % device.
 
+
 \section{Results and Discussion}
 \label{sec:results}
 
@@ -193,16 +194,6 @@ differences of many-body energies: $E^N - E^{N-1}$ yields the \ac{HOMO}, while
 likewise $E^{N+1} - E^N$ yields the \ac{LUMO} (other quasiparticle levels can be
 obtained by taking differences of excited many-body energies). The peaks for
 the \ac{HOMO} and \ac{LUMO} of the system obtained in this way are plotted in figure
-\ref{fig:nobranch}.
-
-\begin{figure}
-	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/nobranch}
-	\end{center}
-	\caption{\ac{HOMO} and \ac{LUMO} quasiparticle levels from
-	figure~\ref{fig:lobro-hwevals} with the }
-	\label{fig:nobranch}
-\end{figure}
 
 \subsection{Single Excitations}
 \label{subsec:singles}
@@ -217,7 +208,7 @@ figure~\ref{fig:cipeaks}.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/cipeaks}
+		\includegraphics[width=0.9\linewidth]{figures/ci_4.5A_homo.eps}
 	\end{center}
 	\caption{}
 	\label{fig:cipeaks}
@@ -227,7 +218,7 @@ Finally, we start adding correlation:
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/cipeaks-device}
+		\includegraphics[width=0.9\linewidth]{figures/cidevice_4.5A_homo.eps}
 	\end{center}
 	\caption{}
 	\label{fig:cipeaks-device}
